# NTUT2015fallPOSD-HW

./: .gitignore  CMakeLists.txt  NTUT2015fallPOSD-HW.cbp  f1.txt  f2.txt  t1.txt  t2.txt
include/: AreaVisitor.h  DescriptionVisitor.h  DrawingController.h  DrawingController.moc  GraphicsFactory.h  GraphicsModel.h  GraphicsVisitor.h  Observable.h  Observer.h  boundingbox.h  circle.h  compositegraphics.h  graphics.h  point.h  rectangle.h  shape.h  simplegraphics.h  square.h
include/commands/: Command.h  CommandManager.h
include/commands/cmd/: Command.h  CreateCircleCmd.h  CreateCircleCommand.h  CreateRectangleCmd.h  CreateRectangleCommand.h  CreateSquareCmd.h  CreateSquareCommand.h  DeleteCmd.h  DeleteCommand.h  GroupCmd.h  GroupCommand.h  LowerCommand.h  LowerLayerCmd.h  MoveCmd.cpp  MoveCmd.h  MoveCommand.h  UnGroupCmd.h  UngroupCommnad.h  UpperCommand.h  UpperLayerCmd.h
include/graphics/: GraphicsFactory.h  MultiRootGraphicFactory.h  RootGraphics.h  compositegraphics.h  graphics.h  simplegraphics.h
include/gui/: CoordinateAxisGraphicsItem.h  DrawingArea.h  DrawingArea.moc  DrawingWindow.h  DrawingWindow.moc  View.h  View.moc
include/gui/shapegraphicitem/: CircleQGraphicsItem.h  CompositeQGraphicsItem.h  RectangleQGraphicsItem.h  ShapeQGraphicsItem.h  SquareQGraphicsItem.h
include/shapes/: circle.h  line.h  point.h  rectangle.h  shape.h  square.h
include/visitor/: AreaVisitor.h  DescriptionVisitor.h  GraphicsVisitor.h  MoveVisitor.h  QtGraphicsToStandardItemModelVisitor.h  QtGraphicsViewVisitor.h
lib/cppunitlite/: Test.h
src/: DrawingController.cpp  GraphicsModel.cpp  Observable.cpp  Observer.cpp  main.cpp  qt_moc.cpp
src/commands/: Command.cpp  CommandManager.cpp
src/commands/cmd/: Command.cpp  CreateCircleCmd.cpp  CreateCircleCommand.cpp  CreateRectangleCmd.cpp  CreateRectangleCommand.cpp  CreateSquareCmd.cpp  CreateSquareCommand.cpp  DeleteCmd.cpp  DeleteCommand.cpp  GroupCmd.cpp  GroupCommand.cpp  LowerCommand.cpp  LowerLayerCmd.cpp  MoveCommand.cpp  UnGroupCmd.cpp  UngroupCommnad.cpp  UpperCommand.cpp  UpperLayerCmd.cpp
src/graphices/: GraphicsFactory.cpp  MultiRootGraphicFactory.cpp  RootGraphics.cpp  compositegraphics.cpp  graphics.cpp  simplegraphics.cpp
src/gui/: CoordinateAxisGraphicsItem.cpp  DrawingArea.cpp  DrawingWindow.cpp  View.cpp
src/gui/shapegraphicitem/: CircleQGraphicsItem.cpp  CompositeQGraphicsItem.cpp  RectangleQGraphicsItem.cpp  ShapeQGraphicsItem.cpp  SquareQGraphicsItem.cpp
src/shapes/: boundingbox.cpp  circle.cpp  line.cpp  point.cpp  rectangle.cpp  shape.cpp  square.cpp
src/test/: hw1_test.cpp  ta.h  test.cpp  utGraphicFactory.h  utGraphicsModelObservable.h  utHW2.h  utHW3.h  utMultiRootGraphics.h  utObserver.h  utTryQt.h
src/visitor/: AreaVisitor.cpp  DescriptionVisitor.cpp  MoveVisitor.cpp  QtGraphicsToStandardItemModelVisitor.cpp  QtGraphicsViewVisitor.cpp
